<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:text="@string/title_label_login_info"
            android:textColor="@android:color/darker_gray"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="101dip"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:background="@drawable/shape_bg_round"
            android:gravity="center"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/hint_et_username"
                    android:paddingLeft="10dip"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@color/color_border" >
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:digits="0123456789.abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ!@#$%^*()_-:"
                    android:hint="@string/hint_et_password"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dip"
                    android:password="true"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textCursorDrawable="@null" />
            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dip"
            android:layout_marginRight="30dip"
            android:layout_marginTop="10dip"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btn_login"
                style="@style/Style_Button"
                android:layout_width="125dip"
                android:layout_height="35dip"
                android:text="@string/title_label_login"
                android:layout_centerInParent="true" />

            <Button
                android:id="@+id/btn_regist"
                style="@style/Style_Button"
                android:layout_width="125dip"
                android:layout_height="35dip"
                android:layout_alignParentRight="true"
                android:text="@string/title_label_regist"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tv_forget_pwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/btn_regist"
                android:layout_marginTop="10dip"
                android:text="@string/title_label_forget_pwd"
                android:textColor="@android:color/darker_gray" 
                android:visibility="gone" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:text="@string/str_versionName"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

    <include
        android:id="@+id/loading"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        layout="@layout/widget_loading"
        android:visibility="gone" />

</RelativeLayout>